Finish styling image correctly to prevent overflow

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
 
   &:first-child {
     margin-right: 7.5px;
@@ -49,6 +50,20 @@
     .subtitle {
       font-weight: lighter;
       font-size: 16px;
+    }
+  }
+
+  // Adds a stylish hover effect to the image while increasing content opacity
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .content {
+      opacity: 0.9;
     }
   }
 }
